# jaco_manipulation

./: .gitignore  .rosinstall  CMakeLists.txt  CMakeLists.txt~  Doxyfile  README  README.md  dump.md  package.xml  setup.py
action/: PlanAndMoveArm.action
include/: doro_manipulation.h~  grasp_pose_generator.h  jaco_hand_pose_generator.h
include/doro_manipulation/: common.h  doro_manipulation.h  grasp_pose_generator.h  put_down_points_generator.h
include/jaco_manipulation/: grasp_pose_generator.h  jaco_boundaries.h  jaco_manipulation.h  put_down_points_generator.h  units.h
include/jaco_manipulation/client/: client.h  jaco_manipulation_client.h  joint_goal.h  move_it_goal.h
include/jaco_manipulation/client/goals/: drop_goal.h  goal.h  grasp_goal.h  joint_goal.h  move_it_goal.h  pose_goal.h
include/jaco_manipulation/client/goals/objects/: drop_goal.h  grasp_goal.h  kinect_goal.h  object_goal.h
include/jaco_manipulation/client/grasps/: front_grasp_orientation.h  grasp_orientation.h  grasp_orientation_generator.h  top_grasp_orientation.h
include/jaco_manipulation/goals/: drop_goal.h  goal.h  goal_input.h  grasp_goal.h  joint_goal.h  kinect_goal.h  move_it_goal.h  pose_goal.h  vision_goal.h
include/jaco_manipulation/grasps/: grasp_pose_generator.h
include/jaco_manipulation/server/: jaco_manipulation.h  jaco_manipulation_server.h
include/jaco_manipulation/targets/: joint_target.h  move_it_target.h  pose_target.h
include/jaco_manipulation/visuals/: moveit_visuals.h
launch/: anchoring_test.launch  arm.launch  baseline_test.launch  baseline_test.rviz  demo.rviz  jaco_manipulation.launch  jaco_manipulation_arena.launch  jaco_moveit.launch  manipulation.rviz  manipulation_arena.rviz  obstacle_anchoring_test.launch
launch/test/: anchoring_edge_case_test.launch  anchoring_test.launch  connect_planning_time_3.launch  connect_planning_time_6.launch  obstacle_anchoring_test.launch  star_connect_planning_time_3.launch  star_connect_planning_time_5.launch  star_connect_planning_time_6.launch
msg/: JacoDebug.msg  MoveItConfig.msg  MoveItGoal.msg  PlanningScene.msg
scripts/: README.md  analyse.py  analyse_anchoring.py  anchoring_test_recorder.py  baseline_test.py  baseline_test_recorder.py  drop_anchoring_db.bash  drop_anchoring_db.js  generate_anchoring_poses.py  generate_baseline_poses.py  generate_poses.py  pose_generator.py  test.py  test_recorder.py
scripts/analyse/: analyse.py  analyse_anchoring.py  analyse_anchoring_template.py  analyse_baseline.py  analyse_baseline_template.py  anchoring_recordings.txt  baseline_recordings.txt  exstract_error_rate.py  extract_edge_cases.py  extract_error_rate.py
scripts/generate/: generate_anchoring_poses.py  generate_baseline_poses.py  generate_obstacle_drop_poses.py  pose_generator.py
scripts/results/01/: 01_baseline_test_recording.csv
scripts/results/02/: 02_baseline_poses.csv  02_baseline_test_recording.csv
scripts/results/anchoring/01/: 01_anchoring_poses.csv  01_anchoring_test_recording.csv
scripts/results/anchoring/02/: 02_anchoring_poses.csv  02_anchoring_test_recording.csv
scripts/results/anchoring/combined/: anchoring_test_combined_recording.csv
scripts/results/anchoring_edge_case/: combined_anchoring_edge_case_test_recording_fails.csv
scripts/results/anchoring_edge_case/connect/01/: notes.md
scripts/results/anchoring_edge_case/connect/02/: 02_anchoring_edge_case_test_recording.csv
scripts/results/anchoring_edge_case/connect/combined/: combined_anchoring_edge_case_test_recording.csv
scripts/results/baseline/01/: 01_baseline_poses.csv  01_baseline_test_recording.csv
scripts/results/baseline/combined/: baseline_combined_recording.csv
scripts/results/obstacle_anchoring/01/: obstacle_anchoring_test_recording_01.csv
scripts/results/obstacle_anchoring/02/: obstacle_anchoring_test_recording.csv
scripts/results/obstacle_anchoring/03/: obstacle_anchoring_test_recording_03.csv
src/: doro_manipulation.cpp  doro_manipulation.cpp~  doro_manipulation_test.cc  gpg_client.cc  grasp_pose_generator.cpp  jaco_boundaries.cpp  jaco_hand_pose_generator.cpp  jaco_manipulation.cpp  jaco_manipulation_client_test.cpp  jaco_manipulation_node.cpp  jaco_manipulation_test.cc  manipulation_services_node.cpp  put_down_points_generator.cpp
src/client/: client.cpp  jaco_manipulation_client.cpp  joint_goal.cpp  move_it_goal.cpp  pose_goal.cpp
src/client/goals/: drop_goal.cpp  goal.cpp  grasp_goal.cpp  joint_goal.cpp  move_it_goal.cpp  pose_goal.cpp
src/client/goals/objects/: drop_goal.cpp  grasp_goal.cpp  kinect_goal.cpp  object_goal.cpp
src/client/grasps/: grasp_orientation_generator.cpp
src/goals/: drop_goal.cpp  goal.cpp  grasp_goal.cpp  joint_goal.cpp  kinect_goal.cpp  move_it_goal.cpp  pose_goal.cpp  vision_goal.cpp
src/grasps/: grasp_pose_generator.cpp
src/server/: jaco_boundaries.cpp  jaco_manipulation.cpp  jaco_manipulation_server.cpp
src/targets/: joint_target.cpp  move_it_target.cpp  pose_target.cpp
src/test_cpp/: move_n_pnp.cpp  test_doro.cpp  test_grasp_poses.cpp
src/visuals/: moveit_visuals.cpp
srv/: GenerateGraspPose.srv  GenerateGraspPoses.srv  GeneratePutDownPoints.srv
test/: CMakeLists.txt  README.md  anchoring_test.cpp  baseline_test.cpp  client_grasp_test.cpp  grasp_pose_generator_client_test.cpp  jaco_manipulation_client_grasp_test.cpp  jaco_manipulation_client_test.cpp
test/include/jaco_manipulation/test/: anchoring_base_test.h  anchoring_edge_case_test.h  anchoring_test.h  baseline_csv_reader.h  csv_reader.h  obstacle_anchoring_test.cpp  obstacle_anchoring_test.h
test/record/: anchoring_edge_case_test_recorder.py  anchoring_test_recorder.py  baseline_test_recorder.py  conversions.py  obstacle_anchoring_test_recorder.py  test_recorder.py
test/src/: anchoring_base_test.cpp  anchoring_edge_case_test.cpp  anchoring_test.cpp  baseline_csv_reader.cpp  baseline_test.cpp  client_grasp_test.cpp  client_test.cpp  csv_reader.cpp  obstacle_anchoring_test.cpp  run_anchoring_edge_case_test.cpp  run_anchoring_test.cpp  run_obstacle_anchoring_test.cpp
(+28 files in other folders)
