<?xml version="1.0"?>
<package>
    <name>jaco_manipulation</name>
    <version>0.0.0</version>
    <description>The jaco_manipulation package</description>
    <author email="chitt@live.in">Chittaranjan Srinivas Swaminathan</author>
    <author email="gjulian@uos.de">Julian Gaal</author>
    <maintainer email="gjulian@uos.de">Julian Gaal</maintainer>
    <license>GNU General Public License</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>wpi_jaco_msgs</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>cmake_modules</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>moveit_core</run_depend>
    <run_depend>moveit_ros_planning_interface</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>wpi_jaco_msgs</run_depend>
</package>
